--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^3.1.2",
     "express": "^4.16.3",
     "mongoose": "^5.9.27",
+    "multer": "^1.4.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.9.1"
   },
