--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mean-course",
+  "name": "mean-project",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
@@ -22,9 +22,12 @@
     "@angular/platform-browser": "^8.0.0",
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
+    "bcrypt": "^5.0.0",
     "core-js": "^3.1.2",
     "express": "^4.16.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.27",
+    "mongoose-unique-validator": "^2.0.3",
     "multer": "^1.4.2",
     "rxjs": "^6.0.0",
     "zone.js": "^0.9.1"
