--- a/backend/backend/package.json
+++ b/backend/backend/package.json
@@ -1,7 +1,15 @@
 {
   "name": "mean-project",
   "version": "0.0.0",
-  "engines": { "node" : "10.13.0" },
+  "scripts": {
+    "ng": "ng",
+    "start": "ng serve",
+    "build": "ng build",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "start:server": "nodemon ./backend/server.js"
+  },
   "private": true,
   "dependencies": {
     "bcryptjs": "^2.4.3",
